<resources>
    <!-- APP -->
    <string name="app_name">MediBell</string>

    <!-- MAIN ACTIVITY -->
    <string name="board_title">BOARD</string>
    <string name="doctor_title">DOCTOR</string>
    <string name="pills_title">DRUGS</string>
    <string name="measurement_title">SCORES</string>

    <!-- BOARD -->
    <string name="empty_list">NO TASKS</string>
    <string name="empty_list_icon_desc">empty_list_icon</string>
    <string name="status_not_done">not done</string>
    <string name="status_done">done</string>

    <!-- TASK FRAGMENTS - GENERAL -->
    <string name="not_chosen_text">not chosen</string>
    <string name="task_date_label">date</string>
    <string name="task_hour_label">time</string>

    <string name="repeat_label">repeat</string>
    <string name="cycle_time_label">cycle time</string>
    <string name="repeat_text_part_one">every</string>
    <string name="repeat_text_part_two">days</string>
    <string name="repeat_text_default_days">7</string>
    <string name="task_date_end_label">until</string>

    <string name="more_label">more…</string>
    <string name="note_label">note</string>

    <string name="button_add">ADD</string>

    <!-- DOCTOR FRAGMENT -->
    <string name="doctor_name_label">doctor</string>

    <!-- MEASUREMENT FRAGMENT -->
    <string name="task_type_label">Wybierz rodzaj zadania:</string>
    <string name="temperature_button">pomiar temperatury</string>
    <string name="pressure_button">pomiar ciśnienia</string>
    <string name="task_unit">Jednostka:</string>
    <string name="unit_celsius">C</string>

    <!-- DRUG FRAGMENT -->
    <string name="drug_name_label">Podaj nazwę leku:</string>
    <string name="drug_dose_label">Wprowadź dawkę:</string>
    <string name="unit_mg">mg</string>
    <string name="unit_description">unit_icon_description</string>

    <!-- NEW DOCTOR DIALOG -->
    <string name="specialization_hint">specialization</string>
    <string name="full_name_hint">full name</string>
    <string name="location_hint">location</string>

    <!-- CHOOSE DOCTOR DIALOG -->
    <string name="avatar_description">avatar</string>
    <string name="add_new_doctor_label">add new doctor…</string>

    <!-- TASK NOTIFICATION -->
    <string name="score_reminder">Pamiętaj o pomiarze!</string>
    <string name="drug_reminder">Pamiętaj o leku!</string>
    <string name="examination_reminder">Pamiętaj o wizycie u lekarza!</string>
    <string name="action_calendar">menu_icon_calendar</string>

    <!-- GRAPH FRAGMENT -->
    <string name="temperature_label">TEMPERATURA CIAŁA</string>
    <string name="pressure_label">CIŚNIENIE KRWI</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
