<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/specialization_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specialization_hint"
        android:layout_margin="@dimen/text_margin"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"
        android:layout_margin="@dimen/text_margin"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:layout_margin="@dimen/text_margin"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:inputType="textCapWords" />

</LinearLayout>
