<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.drugs.drugs_task_tab.DrugTaskFragment">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/input_margin"
                    android:layout_marginBottom="@dimen/input_little_margin"
                    android:text="@string/drug_name_label" />

                <EditText
                    android:id="@+id/drug"
                    android:layout_width="@dimen/input_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/input_little_margin"
                    android:layout_marginBottom="@dimen/input_margin"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/input_margin"
                    android:layout_marginBottom="@dimen/input_little_margin"
                    android:text="@string/drug_dose_label" />

                <EditText
                    android:id="@+id/dose"
                    android:layout_width="@dimen/input_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/input_little_margin"
                    android:layout_marginBottom="@dimen/input_margin"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/group_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/unit_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/icon_margin"
                        android:contentDescription="@string/unit_description"
                        android:src="@drawable/ic_unit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin"
                        android:text="@string/task_unit" />

                    <TextView
                        android:id="@+id/unit_value_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin"
                        android:text="@string/unit_mg" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/group_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/time_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/icon_margin"
                        android:contentDescription="@string/clock_description"
                        android:src="@drawable/ic_clock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin"
                        android:text="@string/task_hour_label" />

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/group_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/date_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/icon_margin"
                        android:contentDescription="@string/calendar_description"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin"
                        android:text="@string/task_date_label" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/label_margin" />
                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/date_expandable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/date_end_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/icon_margin"
                            android:contentDescription="@string/calendar_description"
                            android:src="@drawable/ic_calendar" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/label_margin"
                            android:text="@string/task_date_end_label" />

                        <TextView
                            android:id="@+id/date_end_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/label_margin" />

                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

                <CheckBox
                    android:id="@+id/switch_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/box_margin"
                    android:text="@string/repeat_label" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button_submit"
                    style="?android:borderlessButtonStyle"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
</ScrollView>